src/Schema/Grammar/GeneratedCode/SimpleSchemaParser.py
# Generated from C:\Code\v3\Common\SimpleSchemaGenerator\src\Schema\Grammar\BuildEnvironment\..\SimpleSchema.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys


class SimpleSchemaParser ( Parser ):

    grammarFileName = "SimpleSchema.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "'<'", "'>'", 
                     "'{'", "'}'", "<INVALID>", "<INVALID>", "'pass'", "'simple_schema_include'", 
                     "'simple_schema_config'", "':'", "'='", "','", "'|'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'?'", "'*'", 
                     "'+'" ]

    symbolicNames = [ "<INVALID>", "MULTI_LINE_NEWLINE", "NEWLINE", "MULTI_LINE_ESCAPE", 
                      "HORIZONTAL_WHITESPACE", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "LT", "GT", "LBRACE", "RBRACE", "MULTI_LINE_COMMENT", 
                      "COMMENT", "PASS", "INCLUDE", "CONFIG", "SCOPE_DELIMITER", 
                      "ASSIGNMENT", "COMMA", "OR", "INT", "NUMBER", "ID", 
                      "ARITY_OPTIONAL", "ARITY_ZERO_OR_MORE", "ARITY_ONE_OR_MORE", 
                      "DOUBLE_QUOTE_STRING", "SINGLE_QUOTE_STRING", "TRIPLE_DOUBLE_QUOTE_STRING", 
                      "TRIPLE_SINGLE_QUOTE_STRING", "INDENT", "DEDENT" ]

    RULE_idRule = 0
    RULE_intRule = 1
    RULE_number = 2
    RULE_string = 3
    RULE_enhancedString = 4
    RULE_stringList = 5
    RULE_arg__ = 6
    RULE_argList = 7
    RULE_metadata = 8
    RULE_metadataList = 9
    RULE_arity__ = 10
    RULE_arityOptional = 11
    RULE_arityZeroOrMore = 12
    RULE_arityOneOrMore = 13
    RULE_arityFixed = 14
    RULE_arityVariable = 15
    RULE_statements = 16
    RULE_headerStatement__ = 17
    RULE_standardStatement__ = 18
    RULE_includeStatement = 19
    RULE_configStatement = 20
    RULE_configStatementContent__ = 21
    RULE_unnamedObj = 22
    RULE_obj = 23
    RULE_objAttributes = 24
    RULE_objContent__ = 25
    RULE_unnamedDeclaration = 26
    RULE_declaration = 27
    RULE_declarationAttributes = 28
    RULE_declarationAttributesItems = 29
    RULE_declarationAttributesItem__ = 30
    RULE_extension = 31
    RULE_extensionContent = 32
    RULE_extensionContentStandard = 33
    RULE_extensionContentPositional = 34
    RULE_extensionContentKeywords = 35
    RULE_extensionContentKeyword = 36

    ruleNames =  [ "idRule", "intRule", "number", "string", "enhancedString", 
                   "stringList", "arg__", "argList", "metadata", "metadataList", 
                   "arity__", "arityOptional", "arityZeroOrMore", "arityOneOrMore", 
                   "arityFixed", "arityVariable", "statements", "headerStatement__", 
                   "standardStatement__", "includeStatement", "configStatement", 
                   "configStatementContent__", "unnamedObj", "obj", "objAttributes", 
                   "objContent__", "unnamedDeclaration", "declaration", 
                   "declarationAttributes", "declarationAttributesItems", 
                   "declarationAttributesItem__", "extension", "extensionContent", 
                   "extensionContentStandard", "extensionContentPositional", 
                   "extensionContentKeywords", "extensionContentKeyword" ]

    EOF = Token.EOF
    MULTI_LINE_NEWLINE=1
    NEWLINE=2
    MULTI_LINE_ESCAPE=3
    HORIZONTAL_WHITESPACE=4
    LPAREN=5
    RPAREN=6
    LBRACK=7
    RBRACK=8
    LT=9
    GT=10
    LBRACE=11
    RBRACE=12
    MULTI_LINE_COMMENT=13
    COMMENT=14
    PASS=15
    INCLUDE=16
    CONFIG=17
    SCOPE_DELIMITER=18
    ASSIGNMENT=19
    COMMA=20
    OR=21
    INT=22
    NUMBER=23
    ID=24
    ARITY_OPTIONAL=25
    ARITY_ZERO_OR_MORE=26
    ARITY_ONE_OR_MORE=27
    DOUBLE_QUOTE_STRING=28
    SINGLE_QUOTE_STRING=29
    TRIPLE_DOUBLE_QUOTE_STRING=30
    TRIPLE_SINGLE_QUOTE_STRING=31
    INDENT=32
    DEDENT=33

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class IdRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SimpleSchemaParser.ID, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_idRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdRule" ):
                return visitor.visitIdRule(self)
            else:
                return visitor.visitChildren(self)




    def idRule(self):

        localctx = SimpleSchemaParser.IdRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_idRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(SimpleSchemaParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IntRuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(SimpleSchemaParser.INT, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_intRule

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntRule" ):
                return visitor.visitIntRule(self)
            else:
                return visitor.visitChildren(self)




    def intRule(self):

        localctx = SimpleSchemaParser.IntRuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_intRule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SimpleSchemaParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NumberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SimpleSchemaParser.NUMBER, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_number

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNumber" ):
                return visitor.visitNumber(self)
            else:
                return visitor.visitChildren(self)




    def number(self):

        localctx = SimpleSchemaParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_number)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(SimpleSchemaParser.NUMBER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.DOUBLE_QUOTE_STRING, 0)

        def SINGLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.SINGLE_QUOTE_STRING, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_string

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)




    def string(self):

        localctx = SimpleSchemaParser.StringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_string)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            _la = self._input.LA(1)
            if not(_la==SimpleSchemaParser.DOUBLE_QUOTE_STRING or _la==SimpleSchemaParser.SINGLE_QUOTE_STRING):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnhancedStringContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string(self):
            return self.getTypedRuleContext(SimpleSchemaParser.StringContext,0)


        def TRIPLE_DOUBLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.TRIPLE_DOUBLE_QUOTE_STRING, 0)

        def TRIPLE_SINGLE_QUOTE_STRING(self):
            return self.getToken(SimpleSchemaParser.TRIPLE_SINGLE_QUOTE_STRING, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_enhancedString

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnhancedString" ):
                return visitor.visitEnhancedString(self)
            else:
                return visitor.visitChildren(self)




    def enhancedString(self):

        localctx = SimpleSchemaParser.EnhancedStringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_enhancedString)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleSchemaParser.DOUBLE_QUOTE_STRING, SimpleSchemaParser.SINGLE_QUOTE_STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.string()
                pass
            elif token in [SimpleSchemaParser.TRIPLE_DOUBLE_QUOTE_STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.match(SimpleSchemaParser.TRIPLE_DOUBLE_QUOTE_STRING)
                pass
            elif token in [SimpleSchemaParser.TRIPLE_SINGLE_QUOTE_STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.match(SimpleSchemaParser.TRIPLE_SINGLE_QUOTE_STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StringListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(SimpleSchemaParser.LBRACK, 0)

        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.StringContext)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.StringContext,i)


        def RBRACK(self):
            return self.getToken(SimpleSchemaParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSchemaParser.COMMA)
            else:
                return self.getToken(SimpleSchemaParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_stringList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringList" ):
                return visitor.visitStringList(self)
            else:
                return visitor.visitChildren(self)




    def stringList(self):

        localctx = SimpleSchemaParser.StringListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stringList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SimpleSchemaParser.LBRACK)
            self.state = 88
            self.string()
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    self.match(SimpleSchemaParser.COMMA)
                    self.state = 90
                    self.string() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSchemaParser.COMMA:
                self.state = 96
                self.match(SimpleSchemaParser.COMMA)


            self.state = 99
            self.match(SimpleSchemaParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arg__Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idRule(self):
            return self.getTypedRuleContext(SimpleSchemaParser.IdRuleContext,0)


        def intRule(self):
            return self.getTypedRuleContext(SimpleSchemaParser.IntRuleContext,0)


        def number(self):
            return self.getTypedRuleContext(SimpleSchemaParser.NumberContext,0)


        def enhancedString(self):
            return self.getTypedRuleContext(SimpleSchemaParser.EnhancedStringContext,0)


        def argList(self):
            return self.getTypedRuleContext(SimpleSchemaParser.ArgListContext,0)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_arg__

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg__" ):
                return visitor.visitArg__(self)
            else:
                return visitor.visitChildren(self)




    def arg__(self):

        localctx = SimpleSchemaParser.Arg__Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arg__)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleSchemaParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.idRule()
                pass
            elif token in [SimpleSchemaParser.INT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.intRule()
                pass
            elif token in [SimpleSchemaParser.NUMBER]:
                self.enterOuterAlt(localctx, 3)
                self.state = 103
                self.number()
                pass
            elif token in [SimpleSchemaParser.DOUBLE_QUOTE_STRING, SimpleSchemaParser.SINGLE_QUOTE_STRING, SimpleSchemaParser.TRIPLE_DOUBLE_QUOTE_STRING, SimpleSchemaParser.TRIPLE_SINGLE_QUOTE_STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 104
                self.enhancedString()
                pass
            elif token in [SimpleSchemaParser.LBRACK]:
                self.enterOuterAlt(localctx, 5)
                self.state = 105
                self.argList()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self):
            return self.getToken(SimpleSchemaParser.LBRACK, 0)

        def arg__(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.Arg__Context)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.Arg__Context,i)


        def RBRACK(self):
            return self.getToken(SimpleSchemaParser.RBRACK, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleSchemaParser.COMMA)
            else:
                return self.getToken(SimpleSchemaParser.COMMA, i)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = SimpleSchemaParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(SimpleSchemaParser.LBRACK)
            self.state = 109
            self.arg__()
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.match(SimpleSchemaParser.COMMA)
                    self.state = 111
                    self.arg__() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleSchemaParser.COMMA:
                self.state = 117
                self.match(SimpleSchemaParser.COMMA)


            self.state = 120
            self.match(SimpleSchemaParser.RBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MetadataContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idRule(self):
            return self.getTypedRuleContext(SimpleSchemaParser.IdRuleContext,0)


        def ASSIGNMENT(self):
            return self.getToken(SimpleSchemaParser.ASSIGNMENT, 0)

        def arg__(self):
            return self.getTypedRuleContext(SimpleSchemaParser.Arg__Context,0)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_metadata

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadata" ):
                return visitor.visitMetadata(self)
            else:
                return visitor.visitChildren(self)




    def metadata(self):

        localctx = SimpleSchemaParser.MetadataContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_metadata)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.idRule()
            self.state = 123
            self.match(SimpleSchemaParser.ASSIGNMENT)
            self.state = 124
            self.arg__()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MetadataListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metadata(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleSchemaParser.MetadataContext)
            else:
                return self.getTypedRuleContext(SimpleSchemaParser.MetadataContext,i)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_metadataList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetadataList" ):
                return visitor.visitMetadataList(self)
            else:
                return visitor.visitChildren(self)




    def metadataList(self):

        localctx = SimpleSchemaParser.MetadataListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_metadataList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SimpleSchemaParser.ID:
                self.state = 126
                self.metadata()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arity__Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arityOptional(self):
            return self.getTypedRuleContext(SimpleSchemaParser.ArityOptionalContext,0)


        def arityZeroOrMore(self):
            return self.getTypedRuleContext(SimpleSchemaParser.ArityZeroOrMoreContext,0)


        def arityOneOrMore(self):
            return self.getTypedRuleContext(SimpleSchemaParser.ArityOneOrMoreContext,0)


        def arityFixed(self):
            return self.getTypedRuleContext(SimpleSchemaParser.ArityFixedContext,0)


        def arityVariable(self):
            return self.getTypedRuleContext(SimpleSchemaParser.ArityVariableContext,0)


        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_arity__

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArity__" ):
                return visitor.visitArity__(self)
            else:
                return visitor.visitChildren(self)




    def arity__(self):

        localctx = SimpleSchemaParser.Arity__Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arity__)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.arityOptional()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.arityZeroOrMore()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.arityOneOrMore()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.arityFixed()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.arityVariable()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArityOptionalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARITY_OPTIONAL(self):
            return self.getToken(SimpleSchemaParser.ARITY_OPTIONAL, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_arityOptional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArityOptional" ):
                return visitor.visitArityOptional(self)
            else:
                return visitor.visitChildren(self)




    def arityOptional(self):

        localctx = SimpleSchemaParser.ArityOptionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arityOptional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(SimpleSchemaParser.ARITY_OPTIONAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArityZeroOrMoreContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARITY_ZERO_OR_MORE(self):
            return self.getToken(SimpleSchemaParser.ARITY_ZERO_OR_MORE, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_arityZeroOrMore

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArityZeroOrMore" ):
                return visitor.visitArityZeroOrMore(self)
            else:
                return visitor.visitChildren(self)




    def arityZeroOrMore(self):

        localctx = SimpleSchemaParser.ArityZeroOrMoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arityZeroOrMore)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(SimpleSchemaParser.ARITY_ZERO_OR_MORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArityOneOrMoreContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARITY_ONE_OR_MORE(self):
            return self.getToken(SimpleSchemaParser.ARITY_ONE_OR_MORE, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_arityOneOrMore

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArityOneOrMore" ):
                return visitor.visitArityOneOrMore(self)
            else:
                return visitor.visitChildren(self)




    def arityOneOrMore(self):

        localctx = SimpleSchemaParser.ArityOneOrMoreContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arityOneOrMore)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(SimpleSchemaParser.ARITY_ONE_OR_MORE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArityFixedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SimpleSchemaParser.LBRACE, 0)

        def intRule(self):
            return self.getTypedRuleContext(SimpleSchemaParser.IntRuleContext,0)


        def RBRACE(self):
            return self.getToken(SimpleSchemaParser.RBRACE, 0)

        def getRuleIndex(self):
            return SimpleSchemaParser.RULE_arityFixed

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArityFixed" ):
                return visitor.visitArityFixed(self)
            else:
                return visitor.visitChildren(self)




    def arityFixed(self):

        localctx = SimpleSchemaParser.ArityFixedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_arityFixed)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
